filtres : keyboard, champ, 0 results, transitions, color, manque icones

--- a/SRC_CONTAINER/bin/interface-runtime/text.css
+++ b/SRC_CONTAINER/bin/interface-runtime/text.css
@@ -144,3 +144,10 @@
 	font-size:29px;
 	color:#ffffff;
 }
+
+.noresultfilter{
+	font-family:Museo Sans 500;
+	font-size:20px;
+	color:#FFFFFF;
+	text-align:center;
+}
